--- a/scripts/config.json
+++ b/scripts/config.json
@@ -1,12 +1,12 @@
 {
-  "velas": {
-    "randomTruster": "0xB3dEdba884b52ADf1497E6f632cae04013DF0737",
-    "wag": "0xaBf26902Fd7B624e0db40D31171eA9ddDf078351",
-    "operator": "0xB3dEdba884b52ADf1497E6f632cae04013DF0737",
-    "treasury": "0x3812d358fd62667Db446E2B895422b762bAB690f",
-    "injector": "0x162167dfDB02220c8B35ce6C58E95AB6d1bfB780"
+  "polygon": {
+    "randomTruster": "0x0eFf70b92e1aDF79830dEA6f4EEA015CaD4f8483",
+    "zola": "0x8a226293bC6f697A681B0b29f825c149655fEC2d",
+    "operator": "0x0eFf70b92e1aDF79830dEA6f4EEA015CaD4f8483",
+    "treasury": "0x0eFf70b92e1aDF79830dEA6f4EEA015CaD4f8483",
+    "injector": "0x0eFf70b92e1aDF79830dEA6f4EEA015CaD4f8483"
   },
-  "velasTest": {
+  "polygonTest": {
     "randomTruster": "0xB3dEdba884b52ADf1497E6f632cae04013DF0737",
     "wag": "0xb830d8213e2c3dD621037703D05A5e594387B6Be",
     "operator": "0xB3dEdba884b52ADf1497E6f632cae04013DF0737",
